--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
+  "jest": {
+  "testEnvironment": "node"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -22,7 +25,9 @@
     "Validator": "^1.1.4"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "prisma": "^3.1.1",
+    "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
